# coconut-core

./: CMakeLists.txt  README.md  main.cpp
core/: coconut.cpp  coconut.h
core/checks/static/: static_check.h
core/checks/static/impl/known/: weedhack.h
javahooks/: javahooks.cpp  javahooks.h
javahooks/impl/: processbuilder.h
src/: main.cpp
src/core/: coconut.cpp  coconut.h
src/javahooks/: javahooks.cpp  javahooks.h
src/javahooks/impl/: processbuilder.h  url.h
wintoast/: wintoastlib.cpp
